# MGARD_unstructured

./: .gitignore  CMakeLists.txt  README.md  build.sh  compress_adios.cpp  compress_mgard.cpp  config.json  extract_data.cpp  merge.cpp  reorder.cpp  script.sh
deduplication/: CMakeLists.txt  README.md  build.sh  config.json  dedup.cpp
include/: serialization.hpp
plugin/: CompressMGARDMeshSerializeOperator.h  runconf
serialization/: build.sh
serialization/include/: serialization.hpp
serialization/plugin/: CompressMGARDMeshSerializeOperator.cpp  HOWTO  add_ordering_index.cpp
serialization/src/: add_ordering.cpp  compress_adios.cpp  compress_mgard.cpp  compress_mgard_sort.cpp  compress_sz.cpp  compress_zfp.cpp  convert_to_cgns_standard.cpp  make_meshfile_with_ordering.cpp  merge.cpp  reorder.cpp  todelete_merge.cpp
src/: compress_adios.cpp  compress_adios_with_plugin.cpp  compress_mgard.cpp  compress_with_adios_plugin.cpp  decompress_with_adios_plugin.cpp  evaluate_compression_error.cpp  extract_data.cpp  make_meshfile_with_ordering.cpp  make_ordering.cpp  merge.cpp  reorder.cpp
